tests/valid/definite/SetComprehension_Valid_3.whiley
void System::main([string] args):
     {int} xs
     {int} ys
     {int} zs
     xs = { 1,2,3,4 }
     ys = { 1,2 }
     zs = { x+y | x∈xs, y∈ys }
     print str(xs)
     print str(ys)
     print str(zs)

